Time: 3 ms (72.15%) | Memory: 43.8 MB (5.68%) - LeetSync